Descrição do que foi alterado

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
 
         <div class="center-obj">
-            <img class="center-logo" src='/Music Design (1).png' alt="">
+            <img class="center-logo" src='./Music Design (1).png' alt="">
             <div class="center-title">
                 <p class="text-center">Experimente um som como nunca imaginou.</p>
             </div>
             <button class="button-download">SonarVibes Free</button>
             <div class="text-e-foto">
-                <img class="app-image" src="/Component 1.png" alt="">
+                <img class="app-image" src="./Component 1.png" alt="">
                 <div class="center-title">
                     <p class="text-center">Uma Forma Inteligente, Justa e Superior de Ouvir</p>
                 </div>
@@ -45,23 +45,23 @@
             <div class="objs-container">
                 <div class="objs-simples" id="objs-two">
                     <div class="objs-tittle">
-                        <img class="objs-images-titles" src="/svgexport-3.svg" alt="">
+                        <img class="objs-images-titles" src="./svgexport-3.svg" alt="">
                         <h1>Qualidade de Áudio Superior</h1>
                         <p>Acreditamos que a música deve ser mais do que apenas ruído de fundo—ela deve ser uma experiência. Nosso compromisso com o streaming Hi-Fi proporciona um som com clareza incomparável, garantindo que você ouça a música como ela foi feita para ser ouvida.</p>
                     </div>
                     <div class="list-objs">
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Streaming Sem Perda</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Taxa de Bits Adaptativa</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Áudio Espacial</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Streaming Sem Perda</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Taxa de Bits Adaptativa</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Áudio Espacial</li>
                             </ul>
                         </div>
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Configurações Personalizadas de EQ</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Suporte a Áudio em Alta Resolução</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Sem Anúncios de Áudio</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Configurações Personalizadas de EQ</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Suporte a Áudio em Alta Resolução</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Sem Anúncios de Áudio</li>
                             </ul>
                         </div>
                     </div>
@@ -69,23 +69,23 @@
                 
                 <div class="objs-simples" id="obj-one">
                     <div class="objs-tittle">
-                        <img class="objs-images-titles" src="/svgexport-5.svg" alt="">
+                        <img class="objs-images-titles" src="./svgexport-5.svg" alt="">
                         <h1>Algoritmo Que Conhece Você</h1>
                         <p>Nosso algoritmo inteligente não apenas sugere o que é popular—ele aprende seus gostos únicos e evolui com você. As recomendações impulsionadas por IA da Rhythmiq são projetadas para parecer que conhecem você pessoalmente, apresentando novos favoritos sem perder o ritmo.</p>
                     </div>
                     <div class="list-objs">
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Aprendizado Comportamental</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Playlists Baseadas no Humor</li>                             
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Exploração Profunda de Gênero</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Aprendizado Comportamental</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Playlists Baseadas no Humor</li>                             
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Exploração Profunda de Gênero</li>
                             </ul>
                         </div>
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Curadoria Inteligente</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Recomendações Contextuais</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Filtragem Colaborativa</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Curadoria Inteligente</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Recomendações Contextuais</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Filtragem Colaborativa</li>
                             </ul>
                         </div>
                     </div>
@@ -93,23 +93,23 @@
 
                 <div class="objs-simples" id="objs-two">
                     <div class="objs-tittle">
-                        <img class="objs-images-titles" src="/svgexport-6.svg" alt="">
+                        <img class="objs-images-titles" src="./svgexport-6.svg" alt="">
                         <h1>Pagamento Justo para Artistas</h1>
                         <p>acreditamos que uma ótima música merece uma compensação justa. Construímos nossa plataforma com base no princípio de pagamento justo para garantir que os artistas sejam recompensados de maneira adequada pelo seu trabalho, promovendo um ecossistema musical sustentável e próspero.</p>
                     </div>
                     <div class="list-objs">
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Compartilhamento de Receita Transparente</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Apoio Direto ao Artista</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Pagamento Focado no Artista</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Compartilhamento de Receita Transparente</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Apoio Direto ao Artista</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Pagamento Focado no Artista</li>
                             </ul>
                         </div>
                         <div>
                             <ul>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Taxas de Pagamento Mais Altas</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Promoção de Artistas Independentes</li>
-                                <li class="list-remove"><img class="verificado-objs" src="/svgexport-4.svg" alt="">Análises em Tempo Real</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Taxas de Pagamento Mais Altas</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Promoção de Artistas Independentes</li>
+                                <li class="list-remove"><img class="verificado-objs" src="./svgexport-4.svg" alt="">Análises em Tempo Real</li>
                             </ul>
                         </div>
                     </div>
