--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-navbar">
             <nav class="navbar">
                 <div class="logo">
-                    <img class="logo-img" src='/Music Design (1).png' alt="">
+                    <img class="logo-img" src='./Music Design (1).png' alt="">
                     <p class="name-logo">SonarVibes</p>
                 </div>
                 <div class="list">
